Add node dependencies

--- a/package.json
+++ b/package.json
@@ -1,24 +1,32 @@
 {
-  "name": "cc-map-util",
-  "version": "1.0.0",
-  "description": "Typescript utility library for CrossCode maps",
-  "main": "main.js",
-  "scripts": {
-    "start": "esbuild --target=es2018 --format=esm --platform=node --bundle --sourcemap=inline --outfile=plugin.js src/plugin.ts",
-    "watch": "esbuild --target=es2018 --format=esm --platform=node --bundle --sourcemap=inline --watch --outfile=plugin.js src/plugin.ts",
-    "build": "esbuild --target=es2018 --format=esm --platform=node --bundle --outfile='plugin.js' 'src/plugin.ts'"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/krypciak/cc-map-util.git"
-  },
-  "keywords": [
-    "crosscode"
-  ],
-  "author": "krypek",
-  "license": "GPL-3.0-or-later",
-  "bugs": {
-    "url": "https://github.com/krypciak/cc-map-util/issues"
-  },
-  "homepage": "https://github.com/krypciak/cc-map-util"
+    "name": "cc-map-util",
+    "version": "1.0.0",
+    "description": "Typescript utility library for CrossCode maps",
+    "main": "main.js",
+    "scripts": {
+        "start": "esbuild --target=es2018 --format=esm --platform=node --bundle --sourcemap=inline --outfile=plugin.js src/plugin.ts",
+        "watch": "esbuild --target=es2018 --format=esm --platform=node --bundle --sourcemap=inline --watch --outfile=plugin.js src/plugin.ts",
+        "build": "esbuild --target=es2018 --format=esm --platform=node --bundle --outfile='plugin.js' 'src/plugin.ts'"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/krypciak/cc-map-util.git"
+    },
+    "keywords": [
+        "crosscode"
+    ],
+    "author": "krypek",
+    "license": "GPL-3.0-or-later",
+    "bugs": {
+        "url": "https://github.com/krypciak/cc-map-util/issues"
+    },
+    "homepage": "https://github.com/krypciak/cc-map-util",
+    "devDependencies": {
+         "@types/node": "^20.4.4",
+         "@typescript-eslint/eslint-plugin": "^6.2.0",
+         "@typescript-eslint/parser": "^6.2.0",
+         "esbuild": "^0.18.15",
+         "typescript": "^5.2.2",
+         "ultimate-crosscode-typedefs": "github:krypciak/ultimate-crosscode-typedefs"
+    }
 }
